--- a/public/divs.css
+++ b/public/divs.css
@@ -1,3 +1,394 @@
+*{
+    margin: 0px;
+}
+.signed{
+    float: left;
+    margin-left: 5px;
+    margin-top: 10px;
+    color: white;
+    font-family: 'Roboto', 'sans-serif';
+}
+
+.author h3{
+    color: white;
+    font-family: 'Roboto', 'sans-serif';
+    margin-top: 10px;
+    margin-left: 5px;
+    transition: 2s opacity;
+}
+
+.nametag{
+    border-style: solid;
+    border-color: gray;
+    border-radius: 10px;
+    border-width: 1px;
+    margin-top: 12px;
+    padding-left: 5px;
+    margin-left: 10px;
+    height: 20px;
+    width:100px;
+    z-index: 4;
+}
+
 .intromessage{
+    height: 480px;
+    overflow: auto;
+    position: fixed;
+    transition: 2s opacity;
+}
+
+.next{
+    margin-left: 5px;
+    background-color: #5a82f4;
+    border: 0px none;
+    border-radius: 4px;
+    width: 60px;
+    transition: 2s opacity;
+}
+
+.next:focus{
+    outline: none;
+}
+
+.next img{
+    height: auto;
+    margin-top: 2px;
+    margin-left: 2px;
+    width: 25px;
+}
+
+.intromessage h1{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 30px;
+    transition: 2s opacity;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    color: white;
+    z-index: 2;
+}
+
+.textbox{
+    border-radius: 20px;
+    border-style: solid;
+    border-color: gray;
+    border-width: 1px;
+    top: 505px;
+    width: 250px;
+    height: 35px;
+    margin-left: 5px;
+    padding-left: 10px;
+    position: fixed;
+}
+
+.textbox:focus, input:focus{
+    outline: none;
+}
+
+.sendbutton{
+    background-color: #5a82f4;
+    border: none;
+    border-radius: 20px;
+    top: 500px;
+    margin-right: 10px;
+    height: 40px;
+    width: 40px;
+    margin-left: 85%;
+    position: fixed;
+}
+
+.sendbutton:focus{
+    outline: none;
+}
+
+.sendbutton img{
+    height: auto;
+    margin-top: 5px;
+    width: 25px;
+}
+
+.beach{
+    position: fixed;
+    float: left;
+    mix-blend-mode: darken;
+    filter: brightness(50%);
+}
+
+/*iPhone 6/7/8*/
+@media only screen and (min-height: 667px)
+{
     
+    .textbox{
+        top: 580px;
+        height: 40px;
+        width: 300px;
+        border-radius: 30px;
+    }
+
+    .signed{
+        font-size: 25px;
+    }
+
+    .sendbutton{
+        top: 575px;
+        height: 45px;
+        width: 45px;
+        border-radius: 30px;
+        margin-left: 84%;
+    }
+
+    .nametag{
+        height: 30px;
+        width: 130px;
+        border-radius: 20px;
+        margin-top: 17px;
+    }
+
+    .intromessage{
+        height: 550px;
+    }
+}
+
+/*iPhone 6/7/8 Plus*/
+@media only screen and (min-height: 736px)
+{
+    .textbox{
+        top: 630px;
+        height: 50px;
+        width: 325px;
+        font-size: 20px;
+        border-radius: 30px;
+    }
+
+    .beach{
+        height: 750px;
+    }
+
+    .intromessage{
+        height: 600px;
+    }
+
+    .sendbutton{
+        top: 627px;
+        height: 55px;
+        width: 55px;
+        border-radius: 30px;
+        margin-left: 84%;
+    }
+    
+    .sendbutton img{
+        width: 35px;
+    }
+    .next{
+        width: 65px;
+        height: 40px;
+    }
+
+    .next img{
+        width: 30px;
+    }
+}
+
+/*iPhone X*/
+@media only screen and (min-height: 812px){
+    .beach{
+        height: 1000px;
+        width: auto;
+    }
+
+    .intromessage{
+        height: 700px;
+    }
+
+    .textbox{
+        top: 720px;
+        height: 50px;
+        width: 280px;
+        border-radius: 30px;
+        font-size: 20px;
+    }
+    .sendbutton{
+        top: 717px;
+        height: 55px;
+        width: 55px;
+        border-radius: 30px;
+        margin-left: 80%;
+    }
+    
+    .next{
+        width: 70px;
+        height: 40px;
+    }
+    .next img{
+        width: 30px;
+        margin-left: 7px;
+    }
+}
+
+/*iPad*/
+@media only screen and (min-width: 768px)
+{
+    .beach{
+        height: 1020px;
+    }
+
+    .intromessage{
+        height: 800px;
+    }
+
+    .intromessage h1{
+        font-size: 70px;
+    }
+
+    .author h3{
+        font-size: 40px;
+    }
+    .next{
+        width: 100px;
+        height: 50px;
+    }
+    .next img{
+        width: 35px;
+    }
+
+    .signed{
+        font-size: 40px;
+    }
+
+    .nametag{
+        width: 250px;
+        height: 45px;
+        border-radius: 30px;
+        margin-top: 21px;
+        font-size: 25px;
+    }
+
+    .textbox{
+        top: 850px;
+        height: 80px;
+        width: 620px;
+        border-radius: 40px;
+        font-size: 35px;
+    }
+
+    .sendbutton{
+        width: 85px;
+        height: 85px;
+        border-radius: 40px;
+        margin-left: 85%;
+        top: 847px;
+    }
+
+    .sendbutton img{
+        width: 55px;
+    }
+}
+
+/*iPad Pro*/
+@media only screen and (min-width: 1024px){
+    .beach{
+        height: 1366px;
+    }
+
+    .intromessage{
+        height: 1100px;
+    }
+
+    .intromessage h1{
+        font-size: 80px;
+    }
+
+    .author h3{
+        margin-top: 20px;
+        font-size: 60px;
+    }
+
+    .next{
+        margin-top: 20px;
+        width: 120px;
+        height: 70px;
+    }
+
+    .next img{
+        width: 55px;
+    }
+
+    .signed{
+        font-size: 50px;
+    }
+
+    .nametag{
+        width: 280px;
+        height: 55px;
+        font-size: 35px;
+        padding-left: 12px;
+    }
+
+    .textbox{
+        top: 1175px;
+        height: 95px;
+        width: 820px;
+        margin-left: 20px;
+        border-radius: 60px;
+    }
+
+    .sendbutton{
+        width:  100px;
+        height: 100px;
+        top: 1170px;
+        border-radius: 50px;
+    }
+}
+
+@media only screen and (min-width: 1100px)
+{
+    
+    .beach{
+        height: 1000px;
+    }
+    
+    .signed{
+        font-size: 30px;
+    }
+    .nametag{
+        width: 180px;
+        height: 30px;
+        font-size: 20px;
+    }
+    .intromessage{
+        height: 600px;
+        margin-left: 20px;
+    }
+    .intromessage h1{
+        font-size: 60px;
+    }
+    .author h3{
+        font-size: 40px;
+        margin-left: 20px;
+    }
+    .textbox{
+        top: 640px;
+        height: 50px;
+        width: 920px;
+        margin-left: 70px;
+        font-size: 30px;
+        border-radius: 30px;
+    }
+    .next{
+        height: 40px;
+        width: 60px;
+        margin-top: 10px;
+        margin-left: 20px;
+    }
+    .next img{
+        width: 30px;
+    }
+    .sendbutton{
+        top: 637px;
+        width: 55px;
+        height: 55px;
+        margin-left: 66%;
+    }
+    .sendbutton img{
+        width: 35px;
+    }
 }
